--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-oauth/google": "^0.6.1",
     "@sanity/client": "^4.0.1",
     "@sanity/image-url": "^1.0.2",
+    "axios": "^1.3.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
