--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.8.0",
+    "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
